[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webpy"
version = "1.0.0"
description = "Web Framework built on top of Flask"
readme = "README.md"
authors = [{ name = "User0332", email = "carlzfurtado@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
]
keywords = ["feed", "reader", "tutorial"]
dependencies = [
	"Flask >= 2.2.2",
	"dill >= 0.3.5.1",
	"python-minifier >= 2.8.0"
]
requires-python = ">= 3.9"

[project.urls]
Homepage = "https://github.com/User0332/webpy"