[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webpy-framework"
version = "3.0.0"
description = "Easy-to-use Python web framework built on top of Flask"
readme = "README.md"
authors = [{ name = "Carl Furtado", email = "carlzfurtado@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: HTML",
    "Operating System :: OS Independent",
	"Topic :: Text Processing :: Markup :: Markdown",
	"Topic :: Text Processing :: Markup :: XML",
	"Framework :: Flask",
	"Topic :: Internet :: WWW/HTTP :: HTTP Servers",
	"Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
	"Intended Audience :: Developers",
	"Intended Audience :: Information Technology",
	"Topic :: Text Processing :: Markup",
	"Topic :: Software Development :: Build Tools"
]
keywords = [
	"framework",
	"flask",
	"web",
	"server",
	"html",
	"markdown",
	"pyx",
	"wsgi",
	"http",
	"xml",
	"asgi",
	"deployment",
	"uvicorn"
]
dependencies = [
	"flask >= 2.3.2",
	"dill >= 0.3.6",
	"python-minifier >= 2.9.0",
	"dill >= 0.3.6",
	"flask-session >= 0.5.0",
	"flask-sqlalchemy >= 3.0.3",
	"pyx-pysite >= 1.0.3",
	"marko >= 1.3.0",
	"waitress >= 2.1.2",
	"asgiref >= 3.7.2",
	"uvicorn >= 0.22.0"
]
requires-python = ">= 3.9"

[project.urls]
Homepage = "https://github.com/User0332/webpy"
Documentation = "https://webpy-framework.readthedocs.io/"

[project.scripts]
webpy = "webpy.__main__:main"
webpy-framework = "webpy.__main__:main"

[tool.setuptools]
packages = ["webpy"]